Example extension test needs Java 11
so use old Java 11 APIs only.